<resources>
    <string name="app_name">mvvmDemo</string>
    <string name="str_search_article">\u00A0\u00A0搜索文章</string>
    <string name="str_is_loading">正在加载…</string>
    <string name="str_blog">博客</string>
    <string name="str_project_type">项目分类</string>
    <string name="str_tool">工具</string>
    <string name="str_collect">收藏</string>
    <string name="str_about">关于</string>
    <string name="str_logout">退出登录</string>
</resources>
