<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <!--<item-->
        <!--android:id="@+id/nav_home"-->
        <!--android:icon="@drawable/email"-->
        <!--android:title="@string/home" />-->

        <!--<item-->
        <!--android:id="@+id/nav_lasted_project"-->
        <!--android:icon="@drawable/email"-->
        <!--android:title="@string/lasted_project" />-->

        <!--<item-->
        <!--android:id="@+id/nav_system"-->
        <!--android:icon="@drawable/email"-->
        <!--android:title="@string/system" />-->
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/email"
            android:title="@string/str_blog" />
        <!--<item-->
        <!--android:id="@+id/nav_navigation"-->
        <!--android:icon="@drawable/email"-->
        <!--android:title="@string/navigation" />-->

        <item
            android:id="@+id/nav_project_type"
            android:icon="@drawable/email"
            android:title="@string/str_project_type" />

        <item
            android:id="@+id/nav_tool"
            android:icon="@drawable/email"
            android:title="@string/str_tool" />

        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/email"
            android:title="@string/str_collect" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/email"
            android:title="@string/str_about" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/email"
            android:title="@string/str_logout" />
    </group>

</menu>